--- a/LD3.css
+++ b/LD3.css
@@ -5,7 +5,7 @@
 }
 
 
-table.popup_school_caaspp .value {
+table .value {
   text-align: right;
 }
 
@@ -29,9 +29,13 @@ table.popup_school_caaspp .value {
 
 #legend_div table,tr,td {
   border: 0px;
-  padding: 0px;
+  padding: 0px 0px 0px 0px;
   margin-left: 20px;
   border-spacing: 0;
+}
+
+#legend_div td.legend_value {
+  padding-left: 10px;
 }
 
 #legend_div p.legend_prop {
